--- a/tour-av12.html
+++ b/tour-av12.html
@@ -172,13 +172,13 @@
                         "pitch": -10,
                         "yaw": -3,
                         "type": "scene",
-                        "text": "Avançar no corredor",
+                        "text": "Fachada Lateral",
                         "sceneId": "cena3",
                         "cssClass": "nav-hotspot",
                         "createTooltipFunc": createNavigationHotspot,
                         "createTooltipArgs": {
                             "label": "SEGUIR",
-                            "tooltip": "Continuar pelo corredor"
+                            "tooltip": "Fachada Lateral esquerda"
                         }
                     },
                     {
@@ -202,32 +202,32 @@
                 "pitch": 0,
                 "yaw": 0,
                 "type": "equirectangular",
-                "panorama": "imagens/cena3.jpg",
+                "panorama": "imagens/av4.jpg",
                 "hotSpots": [
                     {
                         "pitch": -10,
                         "yaw": 9,
                         "type": "scene",
-                        "text": "Ir para Sala",
+                        "text": "Fachada Lateral esquerda",
                         "sceneId": "cena4",
                         "cssClass": "nav-hotspot",
                         "createTooltipFunc": createNavigationHotspot,
                         "createTooltipArgs": {
                             "label": "ENTRAR",
-                            "tooltip": "Acessar a Sala Principal"
+                            "tooltip": "Acessar fachada lateral esquerda"
                         }
                     },
                     {
                         "pitch": -5,
                         "yaw": 180,
                         "type": "scene",
-                        "text": "Voltar no corredor",
-                        "sceneId": "cena2",
+                        "text": "Voltar",
+                        "sceneId": "av12",
                         "cssClass": "nav-hotspot",
                         "createTooltipFunc": createNavigationHotspot,
                         "createTooltipArgs": {
                             "label": "Voltar",
-                            "tooltip": "Retornar pelo corredor"
+                            "tooltip": "Retornar"
                         }
                     }
                 ]
@@ -238,7 +238,7 @@
                 "pitch": 0,
                 "yaw": 0,
                 "type": "equirectangular",
-                "panorama": "imagens/cena4.jpg",
+                "panorama": "imagens/av122.jpg",
                 "hotSpots": [
                     {
                         "pitch": 0,
