--- a/tour-av12.html
+++ b/tour-av12.html
@@ -202,7 +202,7 @@
                 "pitch": 0,
                 "yaw": 0,
                 "type": "equirectangular",
-                "panorama": "imagens/av4.jpg",
+                "panorama": "imagens/av4.png",
                 "hotSpots": [
                     {
                         "pitch": -10,
@@ -238,7 +238,7 @@
                 "pitch": 0,
                 "yaw": 0,
                 "type": "equirectangular",
-                "panorama": "imagens/av122.jpg",
+                "panorama": "imagens/av122.png",
                 "hotSpots": [
                     {
                         "pitch": 0,
