--- a/index.html
+++ b/index.html
@@ -594,26 +594,28 @@ footer {
   <!-- Container dos Cards -->
   <section class="section3" id="section3">
     <p><i> Em desenvolvimento... </i></p>
-    <div class="section3-container">
-      <!-- Card 1 -->
+    <!-- <div class="section3-container">
+ 
       <a href="projetos-servico.html" class="service-card">
         <img src="imagens/360img.png" alt="Tour Virtual 360°">
         <div class="texto">
          <h3>Projetos & Serviços</h3>
     <p>Encante seus clientes com experiências imersivas! Conheça nossos pacotes de tour virtual e destaque seus projetos com inovação e tecnologia.</p>
         </div>
-      </a>
+      </a> -->
 
-      <!-- Card 2 -->
-      <div class="service-card blur">
-        <img src="imagens/VR_img.png" alt="Realidade Virtual">
-        <div class="texto">
-          <h3>Em breve</h3>
-          <p>Um novo projeto em <strong> Realidade virtual </strong>para criar ambientes personalizados com imersão total.</p>
-        </div>
-      </div>
-    </div>
-  </section>
+
+  <!-- Card de Realidade Virtual atualizado -->
+<a href="projetos-vr.html" class="service-card">
+  <img src="imagens/VR_img.png" alt="Experiências em Realidade Virtual">
+  <div class="texto">
+    <h3>Experiências em VR</h3>
+    <p>Projetos interativos que transportam você para ambientes imersivos.  
+    Do bem-estar à memória afetiva, cada experiência é criada para emocionar e conectar.</p>
+    <span class="status">Clique para ver todos os projetos</span>
+  </div>
+</a>
+
 
   <!-- Footer -->
   <footer>
