--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
       <a href="portfolio.html" class="button">Stack & Skills</a>
     </div>
     <div class="hero-image">
-      <img src="/ax-lara-main/imagens/imagelarasf.png" alt="Lara E. Negreiros">
+      <img src="/imagens/imagelarasf.png" alt="Lara E. Negreiros">
     </div>
   </section>
 
