--- a/vrexperience.html
+++ b/vrexperience.html
@@ -38,7 +38,7 @@
             /* AQUI ESTÁ A IMAGEM DE FUNDO - SUBSTITUA PELO SEU CAMINHO CORRETO */
             background: 
                 linear-gradient(rgba(5, 5, 5, 0.663), rgba(5, 5, 5, 0.85)),
-                url('/ax-lara-main/imagens/bgstars2.png') no-repeat center center fixed;
+                url('/imagens/bgstars2.png') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             flex-direction: column;
@@ -681,7 +681,7 @@
                 <!-- Projeto Memories Live -->
                 <article class="project-card">
                     <div class="project-image">
-                       <img src="/ax-lara-main/imagens/vr_memorieslive.png "alt="Memories Live" loading="lazy">
+                       <img src="/imagens/vr_memorieslive.png "alt="Memories Live" loading="lazy">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">VR Memories Live</h3>
@@ -704,7 +704,7 @@
         <!-- Projeto Histórico em Realidade Virtual -->
         <article class="project-card">
             <div class="project-image">
-                <img src="/ax-lara-main/imagens/vr_citytime.png" alt="Viagem no Tempo VR" loading="lazy">
+                <img src="/imagens/vr_citytime.png" alt="Viagem no Tempo VR" loading="lazy">
             </div>
             <div class="project-content">
                 <h3 class="project-title">Viagem no Tempo VR</h3>
@@ -723,7 +723,7 @@
                 <!-- Projeto de Interiores em VR -->
                 <article class="project-card">
                     <div class="project-image">
-                        <img src="/ax-lara-main/imagens/VR_img.png "alt="Memories Live" loading="lazy">
+                        <img src="/imagens/VR_img.png "alt="Memories Live" loading="lazy">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Interiores Imersivos VR</h3>
