--- a/vrexperience.html
+++ b/vrexperience.html
@@ -780,10 +780,11 @@
             
             <!-- Espaço para o vídeo do projeto -->
             <div class="video-container">
-                <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background: #000;">
-                    <i class="fas fa-play-circle" style="font-size: 5rem; color: #6c42f5; opacity: 0.7;"></i>
-                </div>
-            </div>
+    <video controls width="100%" height="100%" style="object-fit: cover;" poster="imagens/vr_memorieslive.png">
+        <source src="" type="video/mp4">
+        Seu navegador não suporta o formato de vídeo.
+    </video>
+</div>
         </section>
     </div>
 
@@ -817,7 +818,7 @@
     </script>
 <!-- Óculos VR Gigante Flutuante com Efeito Neon -->
 <div class="vr-glasses-container">
-    <img src="/ax-lara-main/imagens/Apple-Vision-Pro-VR-headset-AR-transparent-PNG-image.png" alt="Óculos VR Meta Quest" class="vr-glasses">
+    <img src="/imagens/Apple-Vision-Pro-VR-headset-AR-transparent-PNG-image.png" alt="Óculos VR Meta Quest" class="vr-glasses">
 </div>
 </body>
 </html>
