--- a/index.html
+++ b/index.html
@@ -992,7 +992,9 @@
   display: none;
 }
   
-
+.menu-toggle {
+  display: flex;
+}
   .nav-menu {
     position: fixed;
     top: 60px;
@@ -1237,21 +1239,22 @@
   <!-- Seção Sobre -->
   <section class="about" id="about">
     <div class="about-container">
-      <h2><span class="ola">Olá,</span> sou Lara E. Negreiros.</h2>
+    <h2><span class="ola">Olá,</span> sou Lara E. Negreiros</h2>
 
-      <!-- Conteúdo visível por padrão -->
-      <p>Criadora e desenvolvedora de experiências ambientais imersivas. Guiada pelas emoções provocadas pelos espaços,
-        busco, através da tecnologia, novas formas de criar experiências que conectem o físico ao virtual.</p>
+<!-- Conteúdo visível por padrão -->
+<p>Criadora de experiências imersivas personalizadas, exploro como os espaços influenciam emoções e comportamentos. Transformo essa relação em projetos digitais que unem design, storytelling e tecnologia, conectando o mundo físico ao virtual de forma significativa.
+</p>
 
-      <!-- Conteúdo que pode ser expandido -->
-      <div class="texto-conteudo" id="texto-conteudo">
-        <div class="gradient-mask">
-          <p>Minha jornada começou na arquitetura e urbanismo, com especialização em projetos arquitetônicos e neuroarquitetura, onde criei experiência em percepção espacial e design efetivo de ambientes. Com o tempo, surgiu o desejo e necessidade de ir além dos limites tradicionais da arquitetura, o que me levou a explorar a tecnologia como novo campo de atuação.</p>
-          <p>Durante essa transição, aprofundei meus estudos em programação e descobri as tecnologias imersivas (XR), onde encontrei a conexão perfeita entre minha bagagem em arquitetura e as novas possibilidades digitais. A partir daí, passei a expandir minhas habilidades na criação de ambientes digitais interativos.</p>
-          <p><strong>Hoje, me especializo em criar experiências imersivas utilizando softwares e tecnologias que permitem transformar espaços físicos em ambientes digitais interativos. Além disso, ofereço serviços como freelancer em modelagem 3D otimizada para ambientes interativos</strong> e <strong>tours virtuais 360°.</strong></p>
-          <p>Em breve, lançarei oficialmente um projeto em realidade virtual dedicado à criação de ambientes imersivos que promovam conexão interna, meditação e bem-estar. Unindo minha experiência técnica ao propósito de oferecer às pessoas um espaço virtual onde possam vivenciar equilíbrio e reconexão consigo mesmas, sem depender de um local físico.</p>
-        </div>
-      </div>
+<!-- Conteúdo que pode ser expandido -->
+<div class="texto-conteudo" id="texto-conteudo">
+  <div class="gradient-mask">
+    <p>Minha trajetória começou na arquitetura e urbanismo, com especialização em projetos arquitetônicos e neuroarquitetura, áreas que me proporcionaram uma base sólida em percepção espacial e design funcional de ambientes. Com o tempo, senti a necessidade de expandir além dos limites tradicionais da arquitetura, explorando a tecnologia como um novo território de criação.</p>
+    
+    <p>Nesse processo, aprofundei meus estudos em programação e descobri as tecnologias imersivas (XR), que se tornaram o elo natural entre minha formação em arquitetura e as infinitas possibilidades digitais. A partir daí, passei a direcionar minha atuação para o desenvolvimento de ambientes virtuais interativos.</p>
+    
+    <p><strong>Hoje, me dedico à criação de experiências imersivas utilizando softwares e tecnologias que transformam espaços físicos em ambientes digitais interativos. Minha atuação envolve desde modelagem 3D otimizada para aplicações interativas e tours virtuais 360°, até projetos em realidade virtual voltados para cultura, bem-estar e inovação — unindo design, storytelling e tecnologia para criar jornadas imersivas significativas.</strong></p>
+  </div>
+</div>
 
       <!-- Botão de expandir -->
       <button id="btn-expandir" class="expand-button">Ver mais</button>
@@ -1292,7 +1295,7 @@
               <img src="/imagens/vr_memorieslive.png" alt="Memories Live" loading="lazy">
             </div>
             <div class="project-content">
-              <h3 class="project-title">VR Memories Live</h3>
+              <h3 class="project-title"> Memories Live</h3>
               <p class="project-description">Imersão poética para reviver memórias especiais de forma personalizada, combinando tecnologia VR com narrativas emocionais.</p>
               <div class="project-tech">
                 <span class="tech-tag">A-frame</span>
@@ -1312,10 +1315,10 @@
           <!-- Projeto Histórico em Realidade Virtual -->
           <article class="project-card">
             <div class="project-image">
-              <img src="/imagens/vr_citytime.png" alt="Viagem no Tempo VR" loading="lazy">
+              <img src="/imagens/vr_citytime.png" alt="Story Scape VR" loading="lazy">
             </div>
             <div class="project-content">
-              <h3 class="project-title">Viagem no Tempo VR</h3>
+              <h3 class="project-title">Story Scape </h3>
               <p class="project-description">
                 Uma experiência imersiva onde o usuário pode explorar a transformação de uma cidade ao longo do tempo, revivendo a história de lugares reais.
               </p>
@@ -1334,7 +1337,7 @@
               <img src="/imagens/VR_img.png" alt="Interiores Imersivos VR" loading="lazy">
             </div>
             <div class="project-content">
-              <h3 class="project-title">Interiores Imersivos VR</h3>
+              <h3 class="project-title">Immersive Design</h3>
               <p class="project-description">
                 Visualização de projetos arquitetônicos residenciais em realidade virtual a partir de modelos 3D do SketchUp.
               </p>
@@ -1395,7 +1398,7 @@
       <p>Entre em contato: <a href="mailto:studio.axlara@gmail.com" class="contact-link">studio.axlara@gmail.com</a></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/laranegreiros" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/aivrse/"><i class="fab fa-instagram"></i></a>
         <a href="https://github.com/axlara" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://wa.me/+5584996249406" target="_blank"><i class="fab fa-whatsapp"></i></a>
       </div>
