--- a/index.html
+++ b/index.html
@@ -1004,9 +1004,8 @@
         border-radius: 50%;
         padding: 8px;
         width: 280px;
-        height: 280px;
+        height: 300px;
         display: flex;
-        align-items: center;
         justify-content: center;
         margin: 20px auto 0;
         overflow: hidden;
@@ -1284,7 +1283,7 @@
       <!-- Botão removido do herói -->
     </div>
     <div class="hero-image">
-      <img src="/imagens/imagelarasf.png" alt="Lara E. Negreiros">
+      <img src="/imagens/axlaravr.png" alt="Lara E. Negreiros">
     </div>
     
     <!-- Óculos VR flutuante no herói -->
