--- a/project-memories-live.html
+++ b/project-memories-live.html
@@ -669,7 +669,7 @@
       <div class="video-container">
         <!-- Para vídeo do YouTube (RECOMENDADO) -->
         <iframe
-          src="https://www.youtube.com/embed/SEU_VIDEO_ID?rel=0&modestbranding=1&showinfo=0"
+          src="/imagens/memorieslivevr.mp4"
           title="Vídeo Memories Live VR"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen>
